Updated HTML file with title, h1, and a paragraph

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git Exercise</title>
 </head>
 
 <body>
-
+    <h1>
+        This is were your hero text goes
+    </h1>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum voluptate assumenda facilis quidem
+        perspiciatis
+        tenetur.
+    </p>
 </body>
 
 </html>
